--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
+    "tailwindcss-scrollbar": "^0.1.0",
     "vite": "^5.4.1"
   }
 }
