--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^11.6.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.30.0",
     "tailwind-merge": "^2.5.2",
