--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "firebase-admin": "^13.3.0",
     "iyzipay": "^2.0.64",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
