--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.30.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "recharts": "^2.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
