--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.0.7",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
