Enhance product details UI and improve error handling; update package dependencies and author information

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "server.js",
     "dev": "nodemon server.js"
   },
-  "author": "sangam mukherjee",
+  "author": "mustafa nahsan",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -30,6 +30,7 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "punycode": "2.3.1"
   }
 }
