--- a/client/package.json
+++ b/client/package.json
@@ -35,9 +35,10 @@
     "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.30.0",
+    "recharts": "^2.7.2",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "recharts": "^2.7.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
