--- a/client/package.json
+++ b/client/package.json
@@ -27,10 +27,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.6.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^18.3.1",
     "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.1.2",
