--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "firebase-admin": "^13.3.0",
     "helmet": "^8.1.0",
     "iyzipay": "^2.0.64",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
