--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "mustafa nahsan",
   "license": "ISC",
   "dependencies": {
+    "@getbrevo/brevo": "^2.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.4.0",
