--- a/client/package.json
+++ b/client/package.json
@@ -31,8 +31,8 @@
     "firebase": "^11.6.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^9.8.0",
     "react-dom": "^18.3.1",
     "react-phone-number-input": "^3.4.12",
@@ -48,15 +48,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "tailwindcss-scrollbar": "^0.1.0",
-    "vite": "^5.4.1"
+    "vite": "^7.0.6"
   }
 }
