--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "firebase": "^11.6.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
+    "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.8.0",
