--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "server.js",
     "dev": "nodemon server.js",
-    "migrate-prices": "node scripts/migrateTLPrices.js"
+    "migrate-prices": "node scripts/migrateTLPrices.js",
+    "update-reviews": "node scripts/updateProductReviews.js"
   },
   "author": "mustafa nahsan",
   "license": "ISC",
