--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
     "postcss": "^8.5.6",
@@ -43,7 +44,7 @@
     "react-router-dom": "^6.30.0",
     "recharts": "^2.7.2",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
